# gr-qitkat

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README
apps/: CMakeLists.txt
cmake/Modules/: GrPython.cmake  qitkatConfig.cmake
docs/: README.qitkat
docs/doxygen/: Doxyfile.in  Doxyfile.swig_doc.in
docs/doxygen/html/: index.html  navtreedata.js
docs/doxygen/latex/: refman.tex
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README
examples/example1/: alice.grc  bob.grc
examples/example2/: example2.grc
grc/: CMakeLists.txt  qitkat_ber_bf.xml  qitkat_bsc_bb.xml  qitkat_ecc_bit_deinterleave_bb.xml  qitkat_ecc_bit_interleave_bb.xml  qitkat_ecc_bit_permute_bb.xml  qitkat_ecc_golay2412_decode_bb.xml  qitkat_ecc_golay2412_encode_bb.xml  qitkat_ecc_hamming74_decode_bb.xml  qitkat_ecc_hamming74_encode_bb.xml  qitkat_ecc_repetition_decode_bb.xml  qitkat_ecc_repetition_encode_bb.xml  qitkat_entropy_bf.xml  qitkat_extract_hardware_sdc.xml  qitkat_filter_timestamps.xml  qitkat_get_hardware_data.xml  qitkat_get_hardware_timestamps.xml  qitkat_qrng_source_i.xml  qitkat_quantum_manager_query.xml  qitkat_receive_message_b.xml  qitkat_sdc_decode_bb.xml  qitkat_sdc_encode_bb.xml  qitkat_send_hardware_data.xml  qitkat_send_message_b.xml  qitkat_terminal_display_b.xml  qrng_source_i.xml
include/qitkat/: CMakeLists.txt  api.h  ber_bf.h  bsc_bb.h  ecc_bit_deinterleave_bb.h  ecc_bit_interleave_bb.h  ecc_bit_permute_bb.h  ecc_golay2412_decode_bb.h  ecc_golay2412_encode_bb.h  ecc_hamming74_decode_bb.h  ecc_hamming74_encode_bb.h  ecc_repetition_decode_bb.h  ecc_repetition_encode_bb.h  entropy_bf.h  extract_hardware_sdc.h  filter_timestamps.h  get_hardware_data.h  get_hardware_timestamps.h  qrng_source_i.h  quantum_manager_query.h  receive_message_b.h  sdc_decode_bb.h  sdc_encode_bb.h  send_hardware_data.h  send_message_b.h  terminal_display_b.h
lib/: CMakeLists.txt  ber_bf_impl.cc  ber_bf_impl.h  bsc_bb_impl.cc  bsc_bb_impl.h  ecc_bit_deinterleave_bb_impl.cc  ecc_bit_deinterleave_bb_impl.h  ecc_bit_interleave_bb_impl.cc  ecc_bit_interleave_bb_impl.h  ecc_bit_permute_bb_impl.cc  ecc_bit_permute_bb_impl.h  ecc_golay.cc  ecc_golay.h  ecc_golay2412_decode_bb_impl.cc  ecc_golay2412_decode_bb_impl.h  ecc_golay2412_encode_bb_impl.cc  ecc_golay2412_encode_bb_impl.h  ecc_golaytable.cc  ecc_hamming74_decode_bb_impl.cc  ecc_hamming74_decode_bb_impl.h  ecc_hamming74_encode_bb_impl.cc  ecc_hamming74_encode_bb_impl.h  ecc_repetition_decode_bb_impl.cc  ecc_repetition_decode_bb_impl.h  ecc_repetition_encode_bb_impl.cc  ecc_repetition_encode_bb_impl.h  entropy_bf_impl.cc  entropy_bf_impl.h  extract_hardware_sdc_impl.cc  extract_hardware_sdc_impl.h  filter_timestamps_impl.cc  filter_timestamps_impl.h  get_hardware_data_impl.cc  get_hardware_data_impl.h  get_hardware_timestamps_impl.cc  get_hardware_timestamps_impl.h  qa_qitkat.cc  qa_qitkat.h  qrng_source_i_impl.cc  qrng_source_i_impl.h  (+15 more)
lib/quantum_manager/: quantum_manager.cc  quantum_manager.h  quantum_manager_server.cc  quantum_manager_server.h  storage_adaptors.h
lib/quantum_manager/noise/: binary_symmetric_channel.cc  binary_symmetric_channel.h  depolarizing.cc  depolarizing.h  noise_map.h  noise_type.h  operators.cc  operators.h  quantum_noise.h  special_case_optimization.cc  special_case_optimization.h
lib/quantum_manager/state/: bell.cc  bell.h  quantum_state.h  state_map.h  state_type.h  vector.cc  vector.h
python/: CMakeLists.txt  __init__.py  qa_ber_bf.py  qa_bsc_bb.py  qa_ecc_golay2412_decode_bb.py  qa_ecc_golay2412_encode_bb.py  qa_ecc_hamming74_decode_bb.py  qa_ecc_hamming74_encode_bb.py  qa_ecc_repetition_decode_bb.py  qa_ecc_repetition_encode_bb.py  qa_entropy_bf.py  qa_extract_hardware_sdc.py  qa_filter_timestamps.py  qa_get_hardware_data.py  qa_get_hardware_timestamps.py  qa_quantum_manager_query.py  qa_sdc_decode_bb.py  qa_sdc_encode_bb.py  qa_send_hardware_data.py  qa_terminal_display_b.py
swig/: CMakeLists.txt  qitkat_swig.i  quantum_manager_server.i
